qmake: Fix incorrect Info.plist replacement of EXECUTABLE_NAME

The app_bundle_name should be used if it's not empty.
Previously it was only used if it was empty.

Amends 0749ba2c5eacc4822cf9c7a31edf8d70c4ef6064

Pick-to: 6.5
Fixes: QTBUG-112668
Change-Id: I4a0e8286eabb5156ad62b448afdf7f54cc78a915
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Amir Masoud Abdol <amir.abdol@qt.io>